<resources>
    <string name="app_name">Новые люди</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_button_text">Вход</string>
    <string name="send_photo">Сформировать заявку</string>
    <string name="logout">Выход</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отменить</string>
    <string name="choose_category">Выберите категорию нарушения</string>
    <string name="report">Заявка</string>
    <string name="getid">Получить Id</string>
    <string name="perms_string">Приложение не может рабоать без доступа к внешнему хранилищу и камере. \n\n Нажмите на данный текст и предоставьте доступ.</string>
</resources>