<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262626">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleReportId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryGetIdButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="#F84D49"
            android:text="@string/getid"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/titleReportId"
            app:layout_constraintEnd_toEndOf="@id/titleReportId"
            app:layout_constraintTop_toTopOf="@id/titleReportId" />

        <androidx.cardview.widget.CardView
            android:id="@+id/previewContainer"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toBottomOf="@id/titleReportId">

            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/addVideoButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerInside"
                android:src="@drawable/ic_plus"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/categories" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/categoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/choose_category"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/previewContainer" />

        <RadioGroup
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/categoryTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#8ECECD"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/categories" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/sendButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
